--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="details">
                 <div class="second-column">
                     <div class="image">
-                        <img src="./_DSF5328.png" alt="">
+                        <img src="./_DSF5328.jpg" alt="">
                     </div>
                 </div>
                 <div class="first-column" class="first_delay">
